@@ -2,10 +2,21 @@
 
 if (!easel_themeinfo('disable_blog_on_homepage')) {
 	Protect();
-	$blog_query = array(
-			'posts_per_page' => (int)easel_themeinfo('home_post_count'),
-			'paged' => get_query_var('paged')
-			);
+	$custom_post_type = get_query_var('post_type');
+	if (!empty($custom_post_type)) {
+		$blog_query = array(
+				'posts_per_page' => (int)easel_themeinfo('home_post_count'),
+				'paged' => get_query_var('paged'),
+				'post_type' => get_query_var('post_type')
+				);
+	} else {
+		$blog_query = array(
+				'posts_per_page' => (int)easel_themeinfo('home_post_count'),
+				'paged' => get_query_var('paged')
+				);
+	}
+/*	if (is_paged()) $blog_query = $query_string;
+	var_dump($blog_query); */
 	$posts = &query_posts($blog_query);
 	if (have_posts()) {
 		while (have_posts()) : the_post();
