@@ -6,7 +6,7 @@ Description: A theme with many different roles and capabilities, a framework-lik
 Author: Philip M. Hofer (Frumph)
 Author URI: http://frumph.net
 Tags: Dark, three-columns, left-sidebar, right-sidebar, fixed-width, custom-background, custom-menu, theme-options, threaded-comments, sticky-post, translation-ready 
-Version: 1.1.3
+Version: 1.1.5
 License: GNU General Public License, v3 (or newer)
 License URI: http://www.opensource.org/licenses/gpl-3.0.html
 */
