@@ -4,6 +4,7 @@ added class .sidebar-no-widgets to handle the sidebar no widgets boxes instead o
 changed .pagetitle to .page-title to be uniformative with the rest of the site
 removed the "count" on how many entries are found during search and archive, added extra unnecessary load
 the feed wasnt able to seperate post_types until now ;/ done
+added support for custom support type archive loop
 
 1.1.4
 removed the tabindex="4" from the comments.php
